--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,46 @@
-# Python and Virtual Environment
-.venv/
-__pycache__/
-*.pyc
+# Environment variables
+.env
 
-# Operating System Files
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Streamlit
+.streamlit/
+
+# Temporary files
+temp_files/
+*.tmp
+*.log
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
 Thumbs.db
-
-# Project-Specific Temporary Files
-temp_files/
-
-# Streamlit/Caching Files
-.streamlit/
-.git/
